<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity__margin"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.fragments.exchange.ExchangeFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilValueToExchange"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_value_to_exchange"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toStartOf="@+id/tilSourceCurrency"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/valueToExchange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSourceCurrency"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/source_currency"
        android:labelFor="@id/spSourceCurrency"
        app:layout_constraintBottom_toBottomOf="@+id/tilValueToExchange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tilValueToExchange"
        app:layout_constraintTop_toTopOf="@+id/tilValueToExchange">

        <Spinner
            android:id="@+id/spSourceCurrency"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilValueExchanged"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/prompt_exchanged_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tilDestinationCurrency"
        app:layout_constraintTop_toBottomOf="@+id/tilValueToExchange">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/valueExchanged"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDestinationCurrency"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/source_currency"
        android:labelFor="@id/spSourceCurrency"
        app:layout_constraintBottom_toBottomOf="@+id/tilValueExchanged"
        app:layout_constraintEnd_toStartOf="@+id/tilValueExchanged"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tilValueExchanged">

        <Spinner
            android:id="@+id/spDestinationCurrency"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnExchange"
        style="@style/ActionButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/exchange"
        android:textAllCaps="false"
        android:textColor="#424141"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>